--- a/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/Views/BadestelleDetailsPage.xaml
+++ b/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/Views/BadestelleDetailsPage.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:EauxDeBaignade.HauteAutriche.Model"
+    xmlns:common="clr-namespace:EauxDeBaignade.HauteAutriche.Common"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -15,6 +16,10 @@
     d:DataContext="{Binding Source={d:DesignInstance Type=model:DesignTimeSampleData, IsDesignTimeCreatable=True}}"
     shell:SystemTray.IsVisible="True">
 
+    <UserControl.Resources>
+        <common:FillColorBrushConverter x:Key="FillColorBrushConverter" />
+    </UserControl.Resources>
+    
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -25,7 +30,19 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="{Binding Badestelle.Name}" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="{Binding Badestelle.DatumDisplay}" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <StackPanel Orientation="Horizontal">
+                <Canvas VerticalAlignment="Center" 
+                        Margin="12,0,6,0" 
+						Background="Transparent" 
+						Width="45" Height="45">
+                    <Ellipse
+						Fill="{Binding Path=Badestelle.WaterQuality,Converter={StaticResource FillColorBrushConverter}}"
+						Height="45"
+						Width="45"/>
+                </Canvas>
+
+                <TextBlock Text="{Binding Badestelle.DatumDisplay}" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            </StackPanel>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
