--- a/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/Views/LegendView.xaml
+++ b/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/Views/LegendView.xaml
@@ -15,6 +15,7 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
+            <RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 		
 		<TextBlock Grid.Row="0" 
@@ -48,5 +49,9 @@
 				</DataTemplate>
 			</Controls:LongListSelector.ItemTemplate>
 		</Controls:LongListSelector>
+        
+        <TextBlock Grid.Row="2" Style="{StaticResource PhoneTextNormalStyle}"
+                   Text="Zeitliche Ausdehnung der Datensätze (Ende): 13.08.2012" 
+                   TextWrapping="Wrap"/>
 	</Grid>
 </UserControl>
